--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = ridopipolop.create_additionalweapons
-archives_base_name = create_additionalweapons-fabric
+maven_group = ridopipolop.additionalweapons
+archives_base_name = additionalweapons-fabric
 mod_version = 0.0.1
 
 minecraft_version = 1.20.1
