--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = ridopipolop.additionalweapons
+maven_group = com.ridopipolop.additionalweapons
 archives_base_name = additionalweapons-fabric
 mod_version = 0.0.1
 
@@ -13,6 +13,8 @@ fabric_loader_version = 0.15.11
 fabric_api_version = 0.92.2+1.20.1
 
 # Mappings
+# https://fabricmc.net/develop
+yarn_mappings=1.20.1+build.10
 # https://lambdaurora.dev/tools/import_quilt.html
 qm_version = 23
 # https://parchmentmc.org/docs/getting-started
