--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,8 @@ configurations.configureEach {
 
 dependencies {
 	// Setup
-	minecraft("com.mojang:minecraft:${minecraft_version}")
+	minecraft "com.mojang:minecraft:${minecraft_version}"
+  // mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
 	mappings(loom.layered {
 		it.mappings("org.quiltmc:quilt-mappings:${minecraft_version}+build.${qm_version}:intermediary-v2")
 		it.parchment("org.parchmentmc.data:parchment-${minecraft_version}:${parchment_version}@zip")
