--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = com.ridopipolop.additionalweapons
-archives_base_name = additionalweapons-fabric
+maven_group = com.ridopipolop.createadditionalweapons
+archives_base_name = createadditionalweapons-fabric
 mod_version = 0.0.1
 
 minecraft_version = 1.20.1
